# mcp-real-estate-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml
mcp_real_estate/: __main__.py  database.py  server.py  tool_groups.py
mcp_real_estate/tools/: investments.py  market.py  neighborhoods.py  properties.py  registry.py
